# cyber-attack-simulator

./: .gitignore  .pylintrc  Cargo.toml  LICENSE  Makefile  README.md  attack_graph.py  attack_simulation_env.py  cleanup.sh  convert_dot.sh  corelang_vocab_merged.json  debug.py  gameplan.md  list_states.py  makefile  patch  pyproject.toml  render_ag.sh  requirements.txt  run.py  run_and_poweroff.sh  run_demo.py  run_env.py  setup.py  tox.ini  train_reinforce.py  train_reinforce_hydra.py
attack_simulator/: __init__.py  agents.py  alphazero_env.py  analysis.py  attack_graph.py  attack_simulation_env.py  config.py  constants.py  custom_callback.py  env.py  evaluate.py  examplemanager.py  graph.py  ids.py  ids_model.py  list_states.py  nx_utils.py  observation.py  optimal_defender.py  policy_agents.py  random_defender.py  rng.py  runner.py  rust_wrapper.py  sim.py  tabular_agents.py  telegram_utils.py  utils.py  wrappers.py
attack_simulator/agents/: __init__.py  agent.py  attackers.py  attackers_policies.py  baseline_agents.py  baseline_defender.py  optimal_agents.py  pathfinder.py  policy_agents.py  searchers.py  tabular_agents.py
attack_simulator/env/: alphazero_env.py  attacksimulator.py  env.py  gym.py  ids.py  observation.py  roles.py
attack_simulator/graphs/: 1way.json  2keys1door.json  attack_graph.json  branches.json  four_ways.json  four_ways_mod.json  orand.json  test_graph.json  threeways.json  two_ways.json
attack_simulator/mal/: graph.py  ids.py  observation.py  sim.py
attack_simulator/models/: dense.py  gnn.py  sr_drl.py  sr_drl_rllib.py
attack_simulator/renderer/: renderer.py  svg_tooltips.py  tweak_layout.py
attack_simulator/rllib/: attackers_policies.py  custom_callback.py  defender_model.py  defender_policy.py  evaluate.py  gnn_model.py  ids_model.py  optimal_defender.py  random_defender.py
attack_simulator/utils/: config.py  reward_utils.py  rng.py  rust_wrapper.py
config/: attacker_sweep.yaml  config.yaml  default_env_config.yaml  default_graph_config.yaml  demo_config.yaml  graph_sweep.yaml  maze_env_config.yaml  small_env_config.yaml  test_config.yaml
config/agent/: reinforce.yaml
config/env/: default.yaml
config/trainer/: only_train.yaml
crate/: agent.py  foi_wazuh_lib.py  kth_main.py  mapping.py
docker/: Dockerfile  oas
docker/mlflow-server/: Dockerfile
docs/: README.md  roadmap.md
docs/diagrams/: high_level.drawio  initial_state.drawio  mal-platform.drawio  mal-platform_with_colors.drawio  mathias_mal-platform.drawio  simulator.drawio
example_graphs/: 2keys1door.json  orand.json
graphs/: 2keys1door copy.yaml  2keys1door.yaml  4ways.yaml  branches.yaml  corelang.json  four_ways.yaml  four_ways_mod.json  four_ways_mod.yaml  orand.json  test_graph.json  test_graph.yaml  threeways.json  two_ways.json
graphs/old_graphs/: medium.yaml
graphs/second_graph_sweep/: model_graph_20.yaml  model_graph_40.yaml  model_graph_80.yaml
graphs/yaml_graphs/: model_small.yaml  three_keys.yaml
infra/: Dockerfile  README.md  admin-service-account  artifact-registry  clean-images  gke-allow  gke-cluster  gke-nat  kas  publish-wheel  ray-k8s-cluster  ray-service-account
mal/: atkgraph_2app_2cr_1net.json  atkgraph_2app_2cr_1net_1swvuln.json  coreLang_gramsec.json  corelang_vocab.json  corelang_vocab_reduced.json  example_1_with_defenses.json  graph_with_defense_status_and_attacker.json  model_2app_2cr_1net.json  model_2app_2cr_1net_1swvuln.json
notebooks/: length-check-agent-eval.ipynb  length-check-rollout.ipynb  length-check-tune-eval.ipynb  length-check-tune-train.ipynb  length-check.ipynb  returns-vs-size-agent-eval-debug.ipynb  returns-vs-size-agent-eval.ipynb  returns-vs-size-rollout.ipynb  returns-vs-size-tune-eval.ipynb  returns-vs-size-tune-split-train-and-eval-DEBUG.ipynb  returns-vs-size-tune-split-train-and-eval.ipynb  returns-vs-size.ipynb
notebooks/save/: length-rollout.csv  returns-rollout.csv  returns-tune-eval.csv
old_graphs/old_graphs/: big.yaml  small.yaml
old_graphs/second_graph_sweep/: model_graph_60.yaml
old_graphs/yaml_graphs/: 1way.yaml  four_ways.yaml  four_ways_mod.yaml  orand.yaml
python/attack_simulator/: custom_callback.py  env.py  evaluate.py  graph.py  ids.py  observation.py  random_defender.py  renderer.py  reward_utils.py  rust_wrapper.py  sim.py
scripts/: ag2dot.py  ag2nx.py  checkpoint2weights.py  convert_yaml.py  csv-diff  df.csv-diff  dot2pdf  eval_rllib.py  evaluator.py  generate-default-dots  generate_baseline_results.py  generate_default_dots.py  graphviz2ag.py  hyperparameter_opt.py  ipynb2py  list-states  list_states.py  load_model.py  mlflow-server.sh  playback_log.py  plot_config.py  publish-wheel  render_graph.py  rllib_common.py  rllib_eval.py  rllib_run_simple.py  run_env.py  run_rllib.py  run_rllib_simple.py  simple_evaluator copy.py  simple_evaluator.py  simple_evaluator_baselines.py  tikz2dot.py  train-reinforce  train_reinforce.py  train_rllib_policy_gradient.py  train_rllib_render.py  tune_hyperparameter_opt.py  tune_run.py  yaml2json.py
src/: attacker_state.rs  attackgraph.rs  config.rs  defender_state.rs  graph.rs  lib.rs  loading.rs  observation.rs  pyattackgraph.rs  pysim.rs  runtime.rs  sim.rs  state.rs  vocab.rs
src/attack_simulator/: alphazero_env.py  analysis.py  attack_graph.py  attack_simulation_env.py  config.py  config_util.py  constant.py  constants.py  custom_callback.py  en2720.yaml  env.py  evaluate.py  graph.py  ids.py  ids_model.py  nx_utils.py  optimal_defender.py  random_defender.py  renderer.py  reward_utils.py  rng.py  runner.py  rust_wrapper.py  sim.py  (+5 more)
stray_code/: explain_noise.py  logarithms.py  merge_vocab.py  mgg2yaml.py  pickle_plot.py  pickle_test.py  reduce_vocab.py  shelve_open.py  yaml2json.py
test/: test_agent.py  test_correctness.py
tests/: conftest.py  test_agent.py  test_agents_agent.py  test_agents_attackers.py  test_agents_baseline_agents.py  test_agents_policy_agents.py  test_agents_tabular_agents.py  test_attackers.py  test_defenders.py  test_env.py  test_graph.py  test_rllib.py  test_rng.py  test_sim.py  test_tests_utils.py
(+35 files in other folders)
