[package]
name = "attack-simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "attack_simulator"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.18.0", features = ["extension-module"] }
rand = "0.8.5"
serde_yaml = "0.9.14"
rand_distr = "0.4.0"
serde_json = "1.0"
serde = {version = "1.0.152", features = ["derive"]}
numpy = "0.18.0"
rand_chacha = "0.3.1"

[package.metadata.maturin]
name = "attack_simulator.rusty_sim"