[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
module-name = "attack_simulator.rusty_sim"

[tool.poetry]
name = "attack_simulator"
version = "2.0"
description = "Reinforcement learning on attack simulations"
license = "MIT"
authors = [
    "Jakob Nyberg <jaknyb@kth.se>=",
    "Pontus Johnson <pontusj@kth.se>="
]

[project]
name = "attack-simulator"
version = "2.6.6"
description = "A MAL based attack simulator"
requires-python = ">=3.10"
authors = [{ name = "Jakob Nyberg", email = "jaknyb@kth.se" }]

# Dependencies via Poetry

#[[tool.poetry.source]]
#name = "ray"
#url = "https://s3-us-west-2.amazonaws.com/ray-wheels/master/"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry.dependencies]
python = "~3.10"
numpy = ">=1.21.4"
matplotlib = ">=3.4.2"
pyyaml = ">=6.0"
aiohttp = ">=3.8"
networkx = ">=2.6.3"
seaborn = ">=0.11.2"
autoflake = ">=1.4"
pydot = ">=1.4.2"
docformatter = ">=1.4"
poetry = ">=1.1.13"
gymnasium = "^0.29.1"
scipy = ">=1.10.0"
tabulate = ">=0.9.0"
scikit-image = ">=0.19.3"
lz4 = ">=4.3.2"
maturin = ">=0.14.13"
pandas = ">=1.5.3"
opencv-python = ">=4.7.0.68"
pip = ">=23.0.1"
einops = ">=0.6.0"
pettingzoo = "^1.24.1"
pyrsistent = "^0.19.3"
pygame = "^2.5.2"
pillow = "^10.1.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"
tox = ">=3.24.4"
tox-poetry-dev-dependencies = "*"
black = {version = ">=22.12.0", extras = ["jupyter"]}
isort = ">=5.10.1"
flake8 = ">=4.0.1"
flakehell = ">=0.9.0"
mypy = ">=0.910"
pydocstyle = ">=6.1.1"
pytest = ">=6.2.5"
pytest-cov = ">=3.0.0"
tensorboard = ">=2.7.0"
jupyterlab = ">=3.2.2"
tqdm = {extras = ["notebook"], version = ">=4.62.3"}
pylint = ">=2.13.9"

# Linting and formatting

[tool.black]
line_length = 100
target_version = ['py310']

[tool.ruff]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.flakehell]
max_line_length = 100
format = "grouped"
show_source = true
extended_default_ignore = []

[tool.flakehell.exceptions."*.ipynb"]
pycodestyle = ["+*", "-E302", "-E305", "-E402"]

[tool.flakehell.plugins]
pyflakes = ["+*"]
pycodestyle = ["+*", "-E203", "-W503"]

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_incomplete_defs = true
no_implicit_optional = true
show_error_codes = true
plugins = "numpy.typing.mypy_plugin"

[tool.coverage.report]
show_missing = true
